# poc-spring-bazel

./: .gitignore  BUILD  README.md  WORKSPACE  maven_install.json  pom.xml
src/main/java/br/com/afi/bazel/demo/: DemoApplication.java
src/main/java/com/afi/bazel/demo/: BUILD.bazel  DemoApplication.java
src/test/java/br/com/afi/bazel/demo/: DemoApplicationTests.java
src/test/java/com/afi/bazel/demo/: BUILD.bazel  DemoApplicationTests.java
