load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "demo",
    srcs = ["DemoApplication.java"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
    ],
)

java_binary(
    name = "DemoApplication",
    main_class = "br.com.afi.bazel.demo.DemoApplication",
    visibility = ["//visibility:public"],
    runtime_deps = [":demo"],
)
