load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")

java_test_suite(
    name = "demo",
    srcs = ["DemoApplicationTests.java"],
    runner = "junit5",
    test_suffixes = ["Tests.java"],  # keep
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
    deps = [
        "//src/main/java/com/afi/bazel/demo",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_springframework_spring_test",
    ],
)
